# OPUS-Backend

./: CMakeLists.txt  README.md  main.cpp  run.sh  src.txt  tokenizer.cpp  tokenizer.hpp
src/: main.cpp
src/Syntax/include/:  WhileStatementSyntax.hpp  AssignmentExpressionSyntax.hpp  BinaryExpressionSyntax.hpp  BlockStatementSyntax.hpp  CompilationUnitSyntax.hpp  ElseClauseSyntax.hpp  ExpressionStatementSyntax.hpp  ExpressionSyntax.hpp  ForStatementSyntax.hpp  IfStatementSyntax.hpp  LiteralExpressionSyntax.hpp  NameExpressionSyntax.hpp  ParenthesizedExpressionSyntax.hpp  Parser.hpp  StatementSyntax.hpp  SyntaxFacts.hpp  SyntaxKind.hpp  SyntaxNode.hpp  SyntaxToken.hpp  SyntaxTree.hpp  UnaryExpressionSyntax.hpp  VariableDeclarationSyntax.hpp  WhileStatementSyntax.hpp
src/Syntax/lib/:  WhileStatementSyntax.cpp  AssignmentExpressionSyntax.cpp  BinaryExpressionSyntax.cpp  BlockStatementSyntax.cpp  CompilationUnitSyntax.cpp  ElseClauseSyntax.cpp  ExpressionStatementSyntax.cpp  ExpressionSyntax.cpp  ForStatementSyntax.cpp  IfStatementSyntax.cpp  LiteralExpressionSyntax.cpp  NameExpressionSyntax.cpp  ParenthesizedExpressionSyntax.cpp  Parser.cpp  StatementSyntax.cpp  SyntaxFacts.cpp  SyntaxKind.cpp  SyntaxNode.cpp  SyntaxToken.cpp  SyntaxTree.cpp  UnaryExpressionSyntax.cpp  VariableDeclarationSyntax.cpp  WhileStatementSyntax.cpp  lexer.cpp
src/include/: SyntaxKind.hpp  lexer.hpp  syntaxToken.hpp  syntaxTokenKind.hpp
src/lib/: SyntaxNode.cpp  lexer.cpp  syntaxToken.cpp
